[package]
name = "adb"
version = "0.1.0"
authors = ["Josh Gao <jmgao@google.com>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = ["client", "client-binary", "server"]
client = ["host"]
client-binary = ["client", "host", "clap"]
host = []
server = ["host"]

[[bin]]
name = "adb"
path = "src/binary/main.rs"

[dependencies]
futures-preview = "= 0.3.0-alpha.16"
romio = "0.3.0-alpha.8"
byteorder = "1"
regex = "1"

clap = { version = "2.33.0", optional = true }
